fixed horizontal scroll

--- a/layout_for_beginners/styles.css
+++ b/layout_for_beginners/styles.css
@@ -40,7 +40,7 @@ html {
   justify-content: space-between;
   width: 100%;
   margin: 0 auto;
-  padding: 0 var(--spacing-md);
+  /* padding: 0 var(--spacing-md); */
 }
 
 #header__hamburger-icon {
